--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,8 +110,13 @@ outline: none;
 	border: 1px solid #ffffff;
 	}
 @media only screen and (max-width: 480px)  {
+    .header{
+        margin-top: 60px;
+        margin-bottom: 40px;
+    }
 	.information{
 	width: 100%;
+        padding-top:0;
 	}
 	.form{
 	width: 90%;
