--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,9 +110,12 @@ outline: none;
 	border: 1px solid #ffffff;
 	}
 @media only screen and (max-width: 480px)  {
+    h1{
+        line-height: 44px;
+    }
     .header{
         margin-top: 60px;
-        margin-bottom: 40px;
+        margin-bottom: 20px;
     }
 	.information{
 	width: 100%;
